docs: rewrite README — concise, all docs/en links, 100k test, vs Restcomm table